Add Unit Tests for Service and Facade. (#10)
* Add service unit tests

* Add facade unit tests.